// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DeletePolicy expect not to render anything for a closed modal 1`] = `
<DeletePolicy
  isModalOpen={false}
  onDelete={[MockFunction]}
  policy={
    Object {
      "id": 1,
      "name": "foo",
    }
  }
  toggle={[MockFunction]}
>
  <Modal
    actions={
      Array [
        <Button
          aria-label="delete"
          onClick={[Function]}
          variant="danger"
        >
          Delete policy
        </Button>,
        <Button
          onClick={[MockFunction]}
          variant="secondary"
        >
          Cancel
        </Button>,
      ]
    }
    appendTo={
      <body
        class=""
      >
        <div>
          <div
            class="pf-c-backdrop"
          >
            <div
              class="pf-l-bullseye"
            >
              <div
                aria-describedby="pf-modal-part-2"
                aria-labelledby="pf-modal-part-1"
                aria-modal="true"
                class="pf-c-modal-box pf-m-sm"
                data-ouia-component-id="0"
                data-ouia-component-type="PF4/ModalContent"
                data-ouia-safe="true"
                id="pf-modal-part-0"
                role="dialog"
              >
                <button
                  aria-disabled="false"
                  aria-label="Close"
                  class="pf-c-button pf-m-plain"
                  data-ouia-component-id="1"
                  data-ouia-component-type="PF4/Button"
                  data-ouia-safe="true"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    style="vertical-align: -0.125em;"
                    viewBox="0 0 352 512"
                    width="1em"
                  >
                    <path
                      d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                      transform=""
                    />
                  </svg>
                </button>
                <header
                  class="pf-c-modal-box__header"
                >
                  <h1
                    class="pf-c-modal-box__title pf-c-modal-box__title"
                    id="pf-modal-part-1"
                  >
                    Delete policy
                  </h1>
                </header>
                <div
                  class="pf-c-modal-box__body"
                  id="pf-modal-part-2"
                >
                  <div
                    class="pf-c-content"
                  >
                    Are you sure you want to delete 
                    <b>
                      foo
                    </b>
                    ? This cannot be undone.
                  </div>
                </div>
                <footer
                  class="pf-c-modal-box__footer"
                >
                  <button
                    aria-disabled="false"
                    aria-label="delete"
                    class="pf-c-button pf-m-danger"
                    data-ouia-component-id="2"
                    data-ouia-component-type="PF4/Button"
                    data-ouia-safe="true"
                    type="button"
                  >
                    Delete policy
                  </button>
                  <button
                    aria-disabled="false"
                    class="pf-c-button pf-m-secondary"
                    data-ouia-component-id="3"
                    data-ouia-component-type="PF4/Button"
                    data-ouia-safe="true"
                    type="button"
                  >
                    Cancel
                  </button>
                </footer>
              </div>
            </div>
          </div>
        </div>
        <div />
      </body>
    }
    aria-describedby=""
    aria-label=""
    aria-labelledby=""
    className=""
    hasNoBodyWrapper={false}
    isOpen={false}
    onClose={[MockFunction]}
    ouiaSafe={true}
    showClose={true}
    title="Delete policy"
    variant="small"
  >
    <Portal
      containerInfo={<div />}
    >
      <ModalContent
        actions={
          Array [
            <Button
              aria-label="delete"
              onClick={[Function]}
              variant="danger"
            >
              Delete policy
            </Button>,
            <Button
              onClick={[MockFunction]}
              variant="secondary"
            >
              Cancel
            </Button>,
          ]
        }
        aria-describedby=""
        aria-label=""
        aria-labelledby=""
        boxId="pf-modal-part-1"
        className=""
        descriptorId="pf-modal-part-3"
        hasNoBodyWrapper={false}
        isOpen={false}
        labelId="pf-modal-part-2"
        onClose={[MockFunction]}
        ouiaSafe={true}
        showClose={true}
        title="Delete policy"
        variant="small"
      />
    </Portal>
  </Modal>
</DeletePolicy>
`;

exports[`DeletePolicy expect to call toggle and onDelete when clicked 1`] = `
<DeletePolicy
  isModalOpen={true}
  onDelete={
    [MockFunction] {
      "calls": Array [
        Array [],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  policy={
    Object {
      "id": 1,
      "name": "foo",
    }
  }
  toggle={
    [MockFunction] {
      "calls": Array [
        Array [],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
>
  <Modal
    actions={
      Array [
        <Button
          aria-label="delete"
          onClick={[Function]}
          variant="danger"
        >
          Delete policy
        </Button>,
        <Button
          onClick={
            [MockFunction] {
              "calls": Array [
                Array [],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": undefined,
                },
              ],
            }
          }
          variant="secondary"
        >
          Cancel
        </Button>,
      ]
    }
    appendTo={
      <body
        class="pf-c-backdrop__open"
      >
        <div
          aria-hidden="true"
        >
          <div
            class="pf-c-backdrop"
          >
            <div
              class="pf-l-bullseye"
            >
              <div
                aria-describedby="pf-modal-part-2"
                aria-labelledby="pf-modal-part-1"
                aria-modal="true"
                class="pf-c-modal-box pf-m-sm"
                data-ouia-component-id="0"
                data-ouia-component-type="PF4/ModalContent"
                data-ouia-safe="true"
                id="pf-modal-part-0"
                role="dialog"
              >
                <button
                  aria-disabled="false"
                  aria-label="Close"
                  class="pf-c-button pf-m-plain"
                  data-ouia-component-id="1"
                  data-ouia-component-type="PF4/Button"
                  data-ouia-safe="true"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    style="vertical-align: -0.125em;"
                    viewBox="0 0 352 512"
                    width="1em"
                  >
                    <path
                      d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                      transform=""
                    />
                  </svg>
                </button>
                <header
                  class="pf-c-modal-box__header"
                >
                  <h1
                    class="pf-c-modal-box__title pf-c-modal-box__title"
                    id="pf-modal-part-1"
                  >
                    Delete policy
                  </h1>
                </header>
                <div
                  class="pf-c-modal-box__body"
                  id="pf-modal-part-2"
                >
                  <div
                    class="pf-c-content"
                  >
                    Are you sure you want to delete 
                    <b>
                      foo
                    </b>
                    ? This cannot be undone.
                  </div>
                </div>
                <footer
                  class="pf-c-modal-box__footer"
                >
                  <button
                    aria-disabled="false"
                    aria-label="delete"
                    class="pf-c-button pf-m-danger"
                    data-ouia-component-id="2"
                    data-ouia-component-type="PF4/Button"
                    data-ouia-safe="true"
                    type="button"
                  >
                    Delete policy
                  </button>
                  <button
                    aria-disabled="false"
                    class="pf-c-button pf-m-secondary"
                    data-ouia-component-id="3"
                    data-ouia-component-type="PF4/Button"
                    data-ouia-safe="true"
                    type="button"
                  >
                    Cancel
                  </button>
                </footer>
              </div>
            </div>
          </div>
        </div>
        <div
          aria-hidden="true"
        />
        <div>
          <div
            class="pf-c-backdrop"
          >
            <div
              class="pf-l-bullseye"
            >
              <div
                aria-describedby="pf-modal-part-4"
                aria-labelledby="pf-modal-part-3"
                aria-modal="true"
                class="pf-c-modal-box pf-m-sm"
                data-ouia-component-id="4"
                data-ouia-component-type="PF4/ModalContent"
                data-ouia-safe="true"
                id="pf-modal-part-2"
                role="dialog"
              >
                <button
                  aria-disabled="false"
                  aria-label="Close"
                  class="pf-c-button pf-m-plain"
                  data-ouia-component-id="5"
                  data-ouia-component-type="PF4/Button"
                  data-ouia-safe="true"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    style="vertical-align: -0.125em;"
                    viewBox="0 0 352 512"
                    width="1em"
                  >
                    <path
                      d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                      transform=""
                    />
                  </svg>
                </button>
                <header
                  class="pf-c-modal-box__header"
                >
                  <h1
                    class="pf-c-modal-box__title pf-c-modal-box__title"
                    id="pf-modal-part-3"
                  >
                    Delete policy
                  </h1>
                </header>
                <div
                  class="pf-c-modal-box__body"
                  id="pf-modal-part-4"
                >
                  <div
                    class="pf-c-content"
                  >
                    Are you sure you want to delete 
                    <b>
                      foo
                    </b>
                    ? This cannot be undone.
                  </div>
                </div>
                <footer
                  class="pf-c-modal-box__footer"
                >
                  <button
                    aria-disabled="false"
                    aria-label="delete"
                    class="pf-c-button pf-m-danger"
                    data-ouia-component-id="6"
                    data-ouia-component-type="PF4/Button"
                    data-ouia-safe="true"
                    type="button"
                  >
                    Delete policy
                  </button>
                  <button
                    aria-disabled="false"
                    class="pf-c-button pf-m-secondary"
                    data-ouia-component-id="7"
                    data-ouia-component-type="PF4/Button"
                    data-ouia-safe="true"
                    type="button"
                  >
                    Cancel
                  </button>
                </footer>
              </div>
            </div>
          </div>
        </div>
      </body>
    }
    aria-describedby=""
    aria-label=""
    aria-labelledby=""
    className=""
    hasNoBodyWrapper={false}
    isOpen={true}
    onClose={
      [MockFunction] {
        "calls": Array [
          Array [],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      }
    }
    ouiaSafe={true}
    showClose={true}
    title="Delete policy"
    variant="small"
  >
    <Portal
      containerInfo={
        <div>
          <div
            class="pf-c-backdrop"
          >
            <div
              class="pf-l-bullseye"
            >
              <div
                aria-describedby="pf-modal-part-4"
                aria-labelledby="pf-modal-part-3"
                aria-modal="true"
                class="pf-c-modal-box pf-m-sm"
                data-ouia-component-id="4"
                data-ouia-component-type="PF4/ModalContent"
                data-ouia-safe="true"
                id="pf-modal-part-2"
                role="dialog"
              >
                <button
                  aria-disabled="false"
                  aria-label="Close"
                  class="pf-c-button pf-m-plain"
                  data-ouia-component-id="5"
                  data-ouia-component-type="PF4/Button"
                  data-ouia-safe="true"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    style="vertical-align: -0.125em;"
                    viewBox="0 0 352 512"
                    width="1em"
                  >
                    <path
                      d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                      transform=""
                    />
                  </svg>
                </button>
                <header
                  class="pf-c-modal-box__header"
                >
                  <h1
                    class="pf-c-modal-box__title pf-c-modal-box__title"
                    id="pf-modal-part-3"
                  >
                    Delete policy
                  </h1>
                </header>
                <div
                  class="pf-c-modal-box__body"
                  id="pf-modal-part-4"
                >
                  <div
                    class="pf-c-content"
                  >
                    Are you sure you want to delete 
                    <b>
                      foo
                    </b>
                    ? This cannot be undone.
                  </div>
                </div>
                <footer
                  class="pf-c-modal-box__footer"
                >
                  <button
                    aria-disabled="false"
                    aria-label="delete"
                    class="pf-c-button pf-m-danger"
                    data-ouia-component-id="6"
                    data-ouia-component-type="PF4/Button"
                    data-ouia-safe="true"
                    type="button"
                  >
                    Delete policy
                  </button>
                  <button
                    aria-disabled="false"
                    class="pf-c-button pf-m-secondary"
                    data-ouia-component-id="7"
                    data-ouia-component-type="PF4/Button"
                    data-ouia-safe="true"
                    type="button"
                  >
                    Cancel
                  </button>
                </footer>
              </div>
            </div>
          </div>
        </div>
      }
    >
      <ModalContent
        actions={
          Array [
            <Button
              aria-label="delete"
              onClick={[Function]}
              variant="danger"
            >
              Delete policy
            </Button>,
            <Button
              onClick={
                [MockFunction] {
                  "calls": Array [
                    Array [],
                  ],
                  "results": Array [
                    Object {
                      "type": "return",
                      "value": undefined,
                    },
                  ],
                }
              }
              variant="secondary"
            >
              Cancel
            </Button>,
          ]
        }
        aria-describedby=""
        aria-label=""
        aria-labelledby=""
        boxId="pf-modal-part-2"
        className=""
        descriptorId="pf-modal-part-4"
        hasNoBodyWrapper={false}
        isOpen={true}
        labelId="pf-modal-part-3"
        onClose={
          [MockFunction] {
            "calls": Array [
              Array [],
            ],
            "results": Array [
              Object {
                "type": "return",
                "value": undefined,
              },
            ],
          }
        }
        ouiaSafe={true}
        showClose={true}
        title="Delete policy"
        variant="small"
      >
        <Backdrop>
          <div
            className="pf-c-backdrop"
          >
            <FocusTrap
              active={true}
              className="pf-l-bullseye"
              focusTrapOptions={
                Object {
                  "clickOutsideDeactivates": true,
                }
              }
              paused={false}
            >
              <div
                className="pf-l-bullseye"
              >
                <ModalBox
                  aria-describedby="pf-modal-part-4"
                  aria-label=""
                  aria-labelledby="pf-modal-part-3"
                  className=""
                  data-ouia-component-id={4}
                  data-ouia-component-type="PF4/ModalContent"
                  data-ouia-safe={true}
                  id="pf-modal-part-2"
                  style={Object {}}
                  variant="small"
                >
                  <div
                    aria-describedby="pf-modal-part-4"
                    aria-label={null}
                    aria-labelledby="pf-modal-part-3"
                    aria-modal="true"
                    className="pf-c-modal-box pf-m-sm"
                    data-ouia-component-id={4}
                    data-ouia-component-type="PF4/ModalContent"
                    data-ouia-safe={true}
                    id="pf-modal-part-2"
                    role="dialog"
                    style={Object {}}
                  >
                    <ModalBoxCloseButton
                      onClose={
                        [MockFunction] {
                          "calls": Array [
                            Array [],
                          ],
                          "results": Array [
                            Object {
                              "type": "return",
                              "value": undefined,
                            },
                          ],
                        }
                      }
                    >
                      <Button
                        aria-label="Close"
                        className=""
                        onClick={
                          [MockFunction] {
                            "calls": Array [
                              Array [],
                            ],
                            "results": Array [
                              Object {
                                "type": "return",
                                "value": undefined,
                              },
                            ],
                          }
                        }
                        variant="plain"
                      >
                        <button
                          aria-disabled={false}
                          aria-label="Close"
                          className="pf-c-button pf-m-plain"
                          data-ouia-component-id={5}
                          data-ouia-component-type="PF4/Button"
                          data-ouia-safe={true}
                          disabled={false}
                          onClick={
                            [MockFunction] {
                              "calls": Array [
                                Array [],
                              ],
                              "results": Array [
                                Object {
                                  "type": "return",
                                  "value": undefined,
                                },
                              ],
                            }
                          }
                          type="button"
                        >
                          <TimesIcon
                            color="currentColor"
                            noVerticalAlign={false}
                            size="sm"
                          >
                            <svg
                              aria-hidden={true}
                              aria-labelledby={null}
                              fill="currentColor"
                              height="1em"
                              role="img"
                              style={
                                Object {
                                  "verticalAlign": "-0.125em",
                                }
                              }
                              viewBox="0 0 352 512"
                              width="1em"
                            >
                              <path
                                d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                                transform=""
                              />
                            </svg>
                          </TimesIcon>
                        </button>
                      </Button>
                    </ModalBoxCloseButton>
                    <ModalBoxHeader>
                      <header
                        className="pf-c-modal-box__header"
                      >
                        <ModalBoxTitle
                          className="pf-c-modal-box__title"
                          id="pf-modal-part-3"
                          title="Delete policy"
                        >
                          <h1
                            className="pf-c-modal-box__title pf-c-modal-box__title"
                            id="pf-modal-part-3"
                          >
                            Delete policy
                          </h1>
                        </ModalBoxTitle>
                      </header>
                    </ModalBoxHeader>
                    <ModalBoxBody
                      id="pf-modal-part-4"
                    >
                      <div
                        className="pf-c-modal-box__body"
                        id="pf-modal-part-4"
                      >
                        <TextContent>
                          <div
                            className="pf-c-content"
                          >
                            Are you sure you want to delete 
                            <b>
                              foo
                            </b>
                            ? This cannot be undone.
                          </div>
                        </TextContent>
                      </div>
                    </ModalBoxBody>
                    <ModalBoxFooter>
                      <footer
                        className="pf-c-modal-box__footer"
                      >
                        <Button
                          aria-label="delete"
                          key="destroy"
                          onClick={[Function]}
                          variant="danger"
                        >
                          <button
                            aria-disabled={false}
                            aria-label="delete"
                            className="pf-c-button pf-m-danger"
                            data-ouia-component-id={6}
                            data-ouia-component-type="PF4/Button"
                            data-ouia-safe={true}
                            disabled={false}
                            onClick={[Function]}
                            type="button"
                          >
                            Delete policy
                          </button>
                        </Button>
                        <Button
                          key="cancel"
                          onClick={
                            [MockFunction] {
                              "calls": Array [
                                Array [],
                              ],
                              "results": Array [
                                Object {
                                  "type": "return",
                                  "value": undefined,
                                },
                              ],
                            }
                          }
                          variant="secondary"
                        >
                          <button
                            aria-disabled={false}
                            aria-label={null}
                            className="pf-c-button pf-m-secondary"
                            data-ouia-component-id={7}
                            data-ouia-component-type="PF4/Button"
                            data-ouia-safe={true}
                            disabled={false}
                            onClick={
                              [MockFunction] {
                                "calls": Array [
                                  Array [],
                                ],
                                "results": Array [
                                  Object {
                                    "type": "return",
                                    "value": undefined,
                                  },
                                ],
                              }
                            }
                            type="button"
                          >
                            Cancel
                          </button>
                        </Button>
                      </footer>
                    </ModalBoxFooter>
                  </div>
                </ModalBox>
              </div>
            </FocusTrap>
          </div>
        </Backdrop>
      </ModalContent>
    </Portal>
  </Modal>
</DeletePolicy>
`;

exports[`DeletePolicy expect to render an open modal without error 1`] = `
<DeletePolicy
  isModalOpen={true}
  onDelete={[MockFunction]}
  policy={
    Object {
      "id": 1,
      "name": "foo",
    }
  }
  toggle={[MockFunction]}
>
  <Modal
    actions={
      Array [
        <Button
          aria-label="delete"
          onClick={[Function]}
          variant="danger"
        >
          Delete policy
        </Button>,
        <Button
          onClick={[MockFunction]}
          variant="secondary"
        >
          Cancel
        </Button>,
      ]
    }
    appendTo={
      <body
        class="pf-c-backdrop__open"
      >
        <div>
          <div
            class="pf-c-backdrop"
          >
            <div
              class="pf-l-bullseye"
            >
              <div
                aria-describedby="pf-modal-part-2"
                aria-labelledby="pf-modal-part-1"
                aria-modal="true"
                class="pf-c-modal-box pf-m-sm"
                data-ouia-component-id="0"
                data-ouia-component-type="PF4/ModalContent"
                data-ouia-safe="true"
                id="pf-modal-part-0"
                role="dialog"
              >
                <button
                  aria-disabled="false"
                  aria-label="Close"
                  class="pf-c-button pf-m-plain"
                  data-ouia-component-id="1"
                  data-ouia-component-type="PF4/Button"
                  data-ouia-safe="true"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    style="vertical-align: -0.125em;"
                    viewBox="0 0 352 512"
                    width="1em"
                  >
                    <path
                      d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                      transform=""
                    />
                  </svg>
                </button>
                <header
                  class="pf-c-modal-box__header"
                >
                  <h1
                    class="pf-c-modal-box__title pf-c-modal-box__title"
                    id="pf-modal-part-1"
                  >
                    Delete policy
                  </h1>
                </header>
                <div
                  class="pf-c-modal-box__body"
                  id="pf-modal-part-2"
                >
                  <div
                    class="pf-c-content"
                  >
                    Are you sure you want to delete 
                    <b>
                      foo
                    </b>
                    ? This cannot be undone.
                  </div>
                </div>
                <footer
                  class="pf-c-modal-box__footer"
                >
                  <button
                    aria-disabled="false"
                    aria-label="delete"
                    class="pf-c-button pf-m-danger"
                    data-ouia-component-id="2"
                    data-ouia-component-type="PF4/Button"
                    data-ouia-safe="true"
                    type="button"
                  >
                    Delete policy
                  </button>
                  <button
                    aria-disabled="false"
                    class="pf-c-button pf-m-secondary"
                    data-ouia-component-id="3"
                    data-ouia-component-type="PF4/Button"
                    data-ouia-safe="true"
                    type="button"
                  >
                    Cancel
                  </button>
                </footer>
              </div>
            </div>
          </div>
        </div>
      </body>
    }
    aria-describedby=""
    aria-label=""
    aria-labelledby=""
    className=""
    hasNoBodyWrapper={false}
    isOpen={true}
    onClose={[MockFunction]}
    ouiaSafe={true}
    showClose={true}
    title="Delete policy"
    variant="small"
  >
    <Portal
      containerInfo={
        <div>
          <div
            class="pf-c-backdrop"
          >
            <div
              class="pf-l-bullseye"
            >
              <div
                aria-describedby="pf-modal-part-2"
                aria-labelledby="pf-modal-part-1"
                aria-modal="true"
                class="pf-c-modal-box pf-m-sm"
                data-ouia-component-id="0"
                data-ouia-component-type="PF4/ModalContent"
                data-ouia-safe="true"
                id="pf-modal-part-0"
                role="dialog"
              >
                <button
                  aria-disabled="false"
                  aria-label="Close"
                  class="pf-c-button pf-m-plain"
                  data-ouia-component-id="1"
                  data-ouia-component-type="PF4/Button"
                  data-ouia-safe="true"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    style="vertical-align: -0.125em;"
                    viewBox="0 0 352 512"
                    width="1em"
                  >
                    <path
                      d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                      transform=""
                    />
                  </svg>
                </button>
                <header
                  class="pf-c-modal-box__header"
                >
                  <h1
                    class="pf-c-modal-box__title pf-c-modal-box__title"
                    id="pf-modal-part-1"
                  >
                    Delete policy
                  </h1>
                </header>
                <div
                  class="pf-c-modal-box__body"
                  id="pf-modal-part-2"
                >
                  <div
                    class="pf-c-content"
                  >
                    Are you sure you want to delete 
                    <b>
                      foo
                    </b>
                    ? This cannot be undone.
                  </div>
                </div>
                <footer
                  class="pf-c-modal-box__footer"
                >
                  <button
                    aria-disabled="false"
                    aria-label="delete"
                    class="pf-c-button pf-m-danger"
                    data-ouia-component-id="2"
                    data-ouia-component-type="PF4/Button"
                    data-ouia-safe="true"
                    type="button"
                  >
                    Delete policy
                  </button>
                  <button
                    aria-disabled="false"
                    class="pf-c-button pf-m-secondary"
                    data-ouia-component-id="3"
                    data-ouia-component-type="PF4/Button"
                    data-ouia-safe="true"
                    type="button"
                  >
                    Cancel
                  </button>
                </footer>
              </div>
            </div>
          </div>
        </div>
      }
    >
      <ModalContent
        actions={
          Array [
            <Button
              aria-label="delete"
              onClick={[Function]}
              variant="danger"
            >
              Delete policy
            </Button>,
            <Button
              onClick={[MockFunction]}
              variant="secondary"
            >
              Cancel
            </Button>,
          ]
        }
        aria-describedby=""
        aria-label=""
        aria-labelledby=""
        boxId="pf-modal-part-0"
        className=""
        descriptorId="pf-modal-part-2"
        hasNoBodyWrapper={false}
        isOpen={true}
        labelId="pf-modal-part-1"
        onClose={[MockFunction]}
        ouiaSafe={true}
        showClose={true}
        title="Delete policy"
        variant="small"
      >
        <Backdrop>
          <div
            className="pf-c-backdrop"
          >
            <FocusTrap
              active={true}
              className="pf-l-bullseye"
              focusTrapOptions={
                Object {
                  "clickOutsideDeactivates": true,
                }
              }
              paused={false}
            >
              <div
                className="pf-l-bullseye"
              >
                <ModalBox
                  aria-describedby="pf-modal-part-2"
                  aria-label=""
                  aria-labelledby="pf-modal-part-1"
                  className=""
                  data-ouia-component-id={0}
                  data-ouia-component-type="PF4/ModalContent"
                  data-ouia-safe={true}
                  id="pf-modal-part-0"
                  style={Object {}}
                  variant="small"
                >
                  <div
                    aria-describedby="pf-modal-part-2"
                    aria-label={null}
                    aria-labelledby="pf-modal-part-1"
                    aria-modal="true"
                    className="pf-c-modal-box pf-m-sm"
                    data-ouia-component-id={0}
                    data-ouia-component-type="PF4/ModalContent"
                    data-ouia-safe={true}
                    id="pf-modal-part-0"
                    role="dialog"
                    style={Object {}}
                  >
                    <ModalBoxCloseButton
                      onClose={[MockFunction]}
                    >
                      <Button
                        aria-label="Close"
                        className=""
                        onClick={[MockFunction]}
                        variant="plain"
                      >
                        <button
                          aria-disabled={false}
                          aria-label="Close"
                          className="pf-c-button pf-m-plain"
                          data-ouia-component-id={1}
                          data-ouia-component-type="PF4/Button"
                          data-ouia-safe={true}
                          disabled={false}
                          onClick={[MockFunction]}
                          type="button"
                        >
                          <TimesIcon
                            color="currentColor"
                            noVerticalAlign={false}
                            size="sm"
                          >
                            <svg
                              aria-hidden={true}
                              aria-labelledby={null}
                              fill="currentColor"
                              height="1em"
                              role="img"
                              style={
                                Object {
                                  "verticalAlign": "-0.125em",
                                }
                              }
                              viewBox="0 0 352 512"
                              width="1em"
                            >
                              <path
                                d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                                transform=""
                              />
                            </svg>
                          </TimesIcon>
                        </button>
                      </Button>
                    </ModalBoxCloseButton>
                    <ModalBoxHeader>
                      <header
                        className="pf-c-modal-box__header"
                      >
                        <ModalBoxTitle
                          className="pf-c-modal-box__title"
                          id="pf-modal-part-1"
                          title="Delete policy"
                        >
                          <h1
                            className="pf-c-modal-box__title pf-c-modal-box__title"
                            id="pf-modal-part-1"
                          >
                            Delete policy
                          </h1>
                        </ModalBoxTitle>
                      </header>
                    </ModalBoxHeader>
                    <ModalBoxBody
                      id="pf-modal-part-2"
                    >
                      <div
                        className="pf-c-modal-box__body"
                        id="pf-modal-part-2"
                      >
                        <TextContent>
                          <div
                            className="pf-c-content"
                          >
                            Are you sure you want to delete 
                            <b>
                              foo
                            </b>
                            ? This cannot be undone.
                          </div>
                        </TextContent>
                      </div>
                    </ModalBoxBody>
                    <ModalBoxFooter>
                      <footer
                        className="pf-c-modal-box__footer"
                      >
                        <Button
                          aria-label="delete"
                          key="destroy"
                          onClick={[Function]}
                          variant="danger"
                        >
                          <button
                            aria-disabled={false}
                            aria-label="delete"
                            className="pf-c-button pf-m-danger"
                            data-ouia-component-id={2}
                            data-ouia-component-type="PF4/Button"
                            data-ouia-safe={true}
                            disabled={false}
                            onClick={[Function]}
                            type="button"
                          >
                            Delete policy
                          </button>
                        </Button>
                        <Button
                          key="cancel"
                          onClick={[MockFunction]}
                          variant="secondary"
                        >
                          <button
                            aria-disabled={false}
                            aria-label={null}
                            className="pf-c-button pf-m-secondary"
                            data-ouia-component-id={3}
                            data-ouia-component-type="PF4/Button"
                            data-ouia-safe={true}
                            disabled={false}
                            onClick={[MockFunction]}
                            type="button"
                          >
                            Cancel
                          </button>
                        </Button>
                      </footer>
                    </ModalBoxFooter>
                  </div>
                </ModalBox>
              </div>
            </FocusTrap>
          </div>
        </Backdrop>
      </ModalContent>
    </Portal>
  </Modal>
</DeletePolicy>
`;
